--- a/config.toml
+++ b/config.toml
@@ -5,10 +5,10 @@ title = "Ryo IGARASHI, Ph.D."
 theme = "kodama-theme"
 
 # The URL the site will be built for
-base_url = "https://rigarash.github.io"
+base_url = "https://www.rigarash.info"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+compile_sass = false
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
