--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ theme = "kodama-theme"
 base_url = "https://www.rigarash.info"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = false
+compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
