Add more LABEL from opencontainers schema.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,5 +4,7 @@ WORKDIR /work
 ENTRYPOINT ["npx", "zenn"]
 CMD ["preview"]
 
-LABEL org.opencontainers.image.source="https://github.com/rigarash/rigarash.github.io" \
-      org.opencontainers.image.authors="Ryo IGARASHI <rigarash@gmail.com>"
+LABEL org.opencontainers.image.authors="Ryo IGARASHI <rigarash@gmail.com>" \
+      org.opencontainers.image.url="https://github.com/rigarash/rigarash.github.io" \
+      org.opencontainers.image.source="https://github.com/rigarash/rigarash.github.io/blob/zenn/docker/Dockerfile" \
+      org.opencontainers.image.title="Zenn CLI Docker image for everyday use"
