--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
 # On every push this script is executed
-on: push
 name: Build and deploy GH Pages
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build:
+    name: Publish site
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     steps:
-      - name: checkout
-        uses: actions/checkout@v3.0.0
+      - name: checkout main
+        uses: actions/checkout@4
       - name: build_and_deploy
-        uses: shalzz/zola-deploy-action@v0.16.1
+        uses: shalzz/zola-deploy-action@v0.18.0
         env:
-          # Target branch
-          PAGES_BRANCH: gh-pages
           # Or if publishing to the same repo, use the automatic token
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
